[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
description = "Implementation of the Phi Accrual Failure Detector"
license = "MIT"
name = "phi-accrual"
repository = "https://github.com/cstorey/phi-accrual-rs"
version = "0.1.0"

[dependencies]
log = "0.4.6"
special-fun = "0.2.0"
streaming-stats = "0.2.2"

[dev-dependencies]
clap = "2.18.0"
env_logger = "0.6.1"
rand = "0.3.14"
