[package]
authors = ["Ceri Storey <ceri@necrofish.org.uk>"]
description = "Implementation of the Phi Accrual Failure Detector"
license = "MIT"
name = "phi-accrual"
repository = "https://github.com/cstorey/phi-accrual-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.6"
special-fun = "0.2.0"
streaming-stats = "0.2.2"

[dev-dependencies]
clap = "2.18.0"
env_logger = "0.8.1"
rand = "0.8.0"
rand_distr = "0.4.0"
